# gsetwacom

./: .gitignore  configure.ac
src/: Makefile.am  device.py  device_pages.py  error.py  gsetwacom.py  libwacom.py  libwrapper.py  logger.py  registry.py  scanner.py  w_info.ui  w_main.py  w_main.ui
